--- a/react/2/to-do-list/package.json
+++ b/react/2/to-do-list/package.json
@@ -1,22 +1,23 @@
 {
+  "homepage": "https://kumail-ahmad.github.io/to-do-list",
   "name": "to-do-list",
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://kumail-ahmad.github.io/to-do-list",
-
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
-  "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
+    "react-scripts": "^5.0.1",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
